app/assets/stylesheets/atoms/_typography.sass
*
  -webkit-font-smoothing: antialiased

h1
  color: #777777
  font-size: modular-scale(16px, 3, 1.333)
  font-weight: 400

h2
  font-size: modular-scale(16px, 2, 1.333)

h3
  font-size: modular-scale(16px, 1, 1.333)

p
  color: $color-text
  font-size: modular-scale(16px, 0, 1.333)

a
  color: #4F99AD
  text-decoration: none

  &:hover
    text-decoration: underline

li
  list-style-position: inside

